--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 </div>
 
-<div id="Dashbourd" class="tabcontent">
+<div id="Dashboard" class="tabcontent">
   <div id="display"></div>
 
             <button onclick="check()">Click me for list</button>
