--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </script>
     
 <div class="tab">
-  <button class="tablinks" onclick="openCity(event, 'dashboard')">Dashboard</button>
+  <button class="tablinks" onclick="openCity(event, 'Dashboard')">Dashboard</button>
   <button class="tablinks" onclick="openCity(event, 'Currency Conversion')">Currency Conversion</button>
       <button class="tablinks" onclick="openCity(event, 'Data Graphs')">Data Graphs</button>
 
